Fixed spacing

--- a/speech3text/public/css/watson-bootstrap-style.css
+++ b/speech3text/public/css/watson-bootstrap-style.css
@@ -483,7 +483,7 @@ h2,
 h3,
 .h3 {
   margin-top: 18px;
-  margin-bottom: 0.6em;
+  margin-bottom: 0.2em;
 }
 h1 small,
 .h1 small,
@@ -798,6 +798,7 @@ pre code {
   padding-left: 15px;
   padding-right: 15px;
   font-family: 'Roboto Condensed', sans-serif;
+  line-height: 0.5em;
 }
 .col-xs-1, .col-xs-2, .col-xs-3, .col-xs-4, .col-xs-5, .col-xs-6, .col-xs-7, .col-xs-8, .col-xs-9, .col-xs-10, .col-xs-11, .col-xs-12 {
   float: left;
